Updated msi installer/multi module maven project