@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="[maven.apache.org](http://maven.apache.org/POM/4.0.0)"
-         xmlns:xsi="[w3.org](http://www.w3.org/2001/XMLSchema-instance)"
-         xsi:schemaLocation="[maven.apache.org](http://maven.apache.org/POM/4.0.0) [maven.apache.org](https://maven.apache.org/xsd/maven-4.0.0.xsd)">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>jdiskmark</groupId>
@@ -11,7 +11,7 @@
 
     <modules>
         <module>jdm-java</module>
-        <module>packages</module> <!-- This will be created later -->
+        <module>packages</module> 
     </modules>
 
     <properties>
@@ -20,7 +20,6 @@
         <exec.mainClass>jdiskmark.App</exec.mainClass>
         <jackson.version>2.17.0</jackson.version>
 
-        <!-- Define versions for common plugins here -->
         <maven.compiler.plugin.version>3.13.0</maven.compiler.plugin.version>
         <maven.shade.plugin.version>3.5.2</maven.shade.plugin.version>
         <maven.assembly.plugin.version>3.6.0</maven.assembly.plugin.version>
@@ -38,6 +37,9 @@
                     <version>${maven.compiler.plugin.version}</version>
                     <configuration>
                         <release>${maven.compiler.release}</release>
+                        <compilerArgs>
+                            <arg>--enable-preview</arg>
+                        </compilerArgs>
                     </configuration>
                 </plugin>
                 <plugin>
